# gompertz-jags

./: README.md  configure.ac
distributions/: Makefile.am
src/: Gompertz.cc
src/distributions/: DGomp.cc  DGomp.h  Makefile.am
